--- a/localisation/replace/kor_countries_l_english.yml
+++ b/localisation/replace/kor_countries_l_english.yml
@@ -148,3 +148,14 @@
  ITA_fascism:0 "이탈리아 왕국"
  
  
+ KOR_EAU_fascism:0 "동아시아국"
+ KOR_EAU_fascism_DEF:0 "동아시아국"
+ KOR_EAU_democratic:0 "동아시아 연합"
+ KOR_EAU_democratic_DEF:0 "동아시아 연합"
+ KOR_EAU_neutrality:0 "동아시아 연합"
+ KOR_EAU_neutrality_DEF:0 "동아시아 연합"
+ KOR_EAU_communism:0 "동아시아 사회주의 공화국 연방"
+ KOR_EAU_communism_DEF:0 "동아시아 사회주의 공화국 연방"
+ KOR_EAU_DEF:0 "동아시아 연합"
+ KOR_EAU_ADJ:0 "동아시아 연합"
+ KOR_EAU:0 "동아시아 연합"
