--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -33,7 +33,7 @@
  korea.3.a:0 "...뭐?"
  
  korea.4.t:0 "경제의 붕괴"
- korea.4.d:0 "해외의 투자자들이 전부 사라지고, 원화가치는 바닥으로 곤두박질치기 시작했습니다. 우리가 보유한 외환은 순식간에 휴지조각이 되어버렸고, 그 여파로 기업들이 연이어 붕괴하고 있습니다. 우리에게 닥친 사상 초유의 재난에 전국 곳곳에서 사재기 현상과 각종 강력범죄들이 기승을 부리고 있습니다. 건국 이래 이런 재난은 존재하지 않았습니다!"
+ korea.4.d:0 "해외의 투자자들이 전부 사라지고, 원화 가치는 바닥으로 곤두박질치기 시작했습니다. 우리가 보유한 외환은 순식간에 휴지조각이 되어버렸고, 그 여파로 기업들이 연이어 붕괴하고 있습니다. 우리에게 닥친 사상 초유의 재난에 전국 곳곳에서 사재기 현상과 각종 강력범죄들이 기승을 부리고 있습니다. 건국 이래 이런 재난은 존재하지 않았습니다!"
  korea.4.a:0 "이 국가가 멸망하려는 것인가?"
 
  korea.5.t:0 "비상계엄 선포"
@@ -135,16 +135,16 @@
  rok.2.a:0 "우리에겐 아직 할일이 남았다"
  
  rok.3.t:0 "하나회 잔재숙청"
- rok.3.d:0 "."
+ rok.3.d:0 "피로 피를 씻는 내전을 일으킨 하나회는 이제 항복을 하였습니다. 우리 한민족의 두번째 비극을 일으킨 그치들이 말입니다.\n그러나 아직 공화국에는 문제가 산재하여 있습니다. 내전기 우리를 호시탐탐 노려보던 북괴놈들이 아직도 적화통일을 넘보고 있으며, 국민들은 피로에 찌들어 있습니다. 저들의 처우를 어떻게 해야 할까요?"
  rok.3.a:0 "그들은 아직 대한민국의 군인들이다"
  rok.3.b:0 "군사독재의 잔재에게 줄 수 있는건 죽음뿐이다!"
  
  rok.4.t:0 "경제위기"
- rok.4.d:0 "."
- rok.4.a:0 ""
+ rok.4.d:0 "미뤄둔 위기가 드디어 닥쳤습니다.\n\n과거로 온 지금, 모든 경제 활동이 멈췄습니다. 외화는 한꺼번에 무용지물이 되었으며, 외국인 투자자들은 사라졌으며, 한화 가치는 곤두박질을 치기 시작하였습니다. \n여기에 내전의 피까지.\n\n이 위기는 4천만 민족의 최대 위기입니다. 이것을 견뎌내지 못한다면, 우리는 안에서부터 쓰러질 것입니다."
+ rok.4.a:0 "오, 이런."
  
  rok.5.t:0 "조선총독부 철거?"
- rok.5.d:0 "."
+ rok.5.d:0 ""
  rok.5.a:0 "보존할 가치가 있다, 다른 곳으로 이전시키자"
  rok.5.b:0 "저 흉측한 것을 없애버려라!"
  
@@ -161,8 +161,8 @@
  rok.8.a:0 ""
  
  rok.9.t:0 "두 전직대통령 문제"
- rok.9.d:0 ""
- rok.9.a:0 "당장구속하라!"
+ rok.9.d:0 "내전의 수괴, 민주주의의 반역자, 국민의 배신자. 여러 칭호로 불리는 노태우와 전두환, 두 대통령의 신변이 오늘 정보부에 입수되었습니다.\n\n대한민국을 피로 물들인 신군부의 수괴인 두 대통령을 우리는 어떻게 해야할까요?"
+ rok.9.a:0 "당장 구속하라!"
  rok.9.b:0 "사면하라"
  
  rok.10.t:0 "중국에 접촉하다"
@@ -262,8 +262,8 @@
  rok.33.a:0 "좋군"
  
  rok.36.t:0 "동아시아 연방 제안"
- rok.36.d:0 ""
- rok.36.a:0 ""
+ rok.36.d:0 "이제 동아시아가 다시 하나로 연합되었습니다. 우리는 이제 동아시아 연방을 신청해야 합니다."
+ rok.36.a:0 "좋군."
  
  rok.37.t:0 "거래를 제안한 대한민국."
  rok.37.d:0 "대한민국은 우리에게 거래를 제안하였습니다. 전쟁중인 우리의 사정을 생각해 최신무기와 장비의 제공을 약속하는 대신에 말레이의 통제권을 요청하였습니다. 우린 어떻게 회답해야할까요?"
