--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -286,5 +286,5 @@
  KOR_plan_hitler_axis:0 "미래의 기억"
  KOR_ammo:0 "탄피 줍기" 
  KOR_ammo_desc:0 "매우 안타깝게도, 이 모드에서는 '탄약'이라는 현대장비 고유의 생산필요 장비가 있습니다. 이 장비는 그냥 냅둬도 소모가 되니까, 반드시 생산라인에 설정해주셔야 합니다. 안하면 당신이 2009년을 하든 1991년을 하든간에 무조건 게임 터집니다."
- KOR_modern_eqp_ic:0 "제너럴 윤의 총기설계"
- KOR_modern_eqp_ic_desc:0 "제너럴 윤의 가호를 받아, 우리 K2를 비롯하여 많은, 아주... 많은 장비들이 생산될 것입니다."
+ KOR_modern_eqp_ic_2:0 "제너럴 윤의 총기설계"
+ KOR_modern_eqp_ic_2_desc:0 "제너럴 윤의 가호를 받아, 우리 K2를 비롯하여 많은, 아주... 많은 장비들이 생산될 것입니다."
