--- a/localisation/replace/09_events_l_english.yml
+++ b/localisation/replace/09_events_l_english.yml
@@ -148,7 +148,7 @@
  KOR_MB.31.a:0 "안타깝군."
   
  KOR_MB.2009.t:0 "타임슬립코리아 모드소개"
- KOR_MB.2009.d:0 "'타임슬립 코리아'를 플레이 해주셔서 감사합니다 이 모드는 현대 한반도가 1936년으로 트립한 세계이며. 처음하시는 분들을 위한 모드 정보와 개발자 인사가 준비되어있습니다."
+ KOR_MB.2009.d:0 "'타임슬립 코리아'를 플레이 해주셔서 감사합니다 이 모드는 현대 한반도가 1936년으로 트립한 세계이며. 처음하시는 분들을 위한 모드 정보와 개발자 인사가 준비되어있습니다.\n\n만약 플레이어가 91년도 시나리오를 플레이 할 경우, 초반에는 4배속으로 게임진행하는 것을 추천드립니다."
  KOR_MB.2009.a:0 "개발자 인사로 넘어가기"
  KOR_MB.2009.b:0 "무엇이 추가되어 있나요?"
  KOR_MB.2009.c:0 "저는 게임을 시작하고 싶은 걸요?"
