--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -217,6 +217,17 @@
  KOR_food_1_desc:0 "아직까지는 문제가 없어보이지만. 점점 대두되고 있습니다. 굶주리는 인민들에게 배급해줄 식량을 늘리지 않으면 대재앙이 일어날 것은 분명합니다. 우리는 이를 막아야만 합니다."
  KOR_juche:0 "주체사상"
  KOR_juche_desc:0 "'김일성-김정일주의'라고도 불리는 주체사상은 조선민주주의인민공화국의 통치이념입니다. 1인 독재 권력을 정당화하고 김씨조선 체제를 유지하는 사상으로 사실상 사회주의와는 거리가 먼 이념입니다."
+ KOR_juche_2:0 "주체사상"
+ KOR_juche_2_desc:0 "'김일성-김정일주의'라고도 불리는 주체사상은 조선민주주의인민공화국의 통치이념입니다. 1인 독재 권력을 정당화하고 김씨조선 체제를 유지하는 사상으로 사실상 사회주의와는 거리가 먼 이념입니다."
  KOR_food_2:0 "식량난 위기"
  KOR_food_3:0 "식량난 위기"
- KOR_food_4:0 "고난의 행군"
+ KOR_food_4:0 "고난의 행군" 
+ KOR_food_0:0 "남조선의 식량지원"
+ KOR_fund:0 "비용지불"
+ KOR_Marx:0 "마르크스-레닌주의"
+ KOR_Marx_desc:0 "마르크스-레닌주의는 냉전 시대에 존재했던 수많은 공산국가가 국가 이념으로 채택했던 이념이며, 제3세계의 국가 정책 및 경제발전 이론에 영향을 주었습니다. 이는 현 시대(21세기)에는 거의 사장된 이념이지만 20세기 자본주의 국가들에게는 큰 위협이 되었습니다."
+ chunrima:0 "천리마 운동"
+ chunrima_desc:0 ""동무는 천리마를 탔는가? 보수주의 소극성을 불사르라!"\n\n위의 표어로 대표되는 천리마 운동은, 노동자들에 대한 독려와 경쟁을 통하여 생산량 증대와 속도전을 꾀하고자 하였습니다. 실시배경은 당시 '3개년계획'의 수행으로 전후 복구 건설이 어느 정도 달성되었으므로, 이 바탕 위에서 새로운 '인민경제 5개년계획'을 실시하려고 1956년 김일성이 소련과 동유럽을 순방하면서 원조를 요청하였으나 큰 성과를 얻지 못함에 따라 부득이 새로운 성장동력을 추진할 수밖에 없었던 데에 있습니다."
+ prk_jap_propaganda:0 "일본에 공산주의 선전"
+ Securing_Seoul:0 "서울 확보"
+ bypass_Seoul:0 "서울 우회"
