--- a/localisation/replace/kor_victory_points_l_english.yml
+++ b/localisation/replace/kor_victory_points_l_english.yml
@@ -1,7 +1,6 @@
 ﻿l_english:
  VICTORY_POINTS_7125:0 "서울"
  VICTORY_POINTS_13250:0 "대구"
- VICTORY_POINTS_11915:0 "사리원"
  VICTORY_POINTS_11835:0 "신의주"
  VICTORY_POINTS_13251:0 "울산"
  VICTORY_POINTS_3981:0 "함흥"
@@ -23,6 +22,31 @@
  VICTORY_POINTS_13240:0 "파주"
  VICTORY_POINTS_13239:0 "의정부"
  VICTORY_POINTS_4052:0 "남포"
+ VICTORY_POINTS_4004:0 "평강"
+ VICTORY_POINTS_3852:0 "북청"
+ VICTORY_POINTS_852:0 "장진"
+ VICTORY_POINTS_11915:0 "사리원"
+ VICTORY_POINTS_13243:0 "곡산"
+ VICTORY_POINTS_7021:0 "강릉"
+ VICTORY_POINTS_1148:0 "철원"
+ VICTORY_POINTS_9936:0 "원주"
+ VICTORY_POINTS_4103:0 "안동"
+ VICTORY_POINTS_12060:0 "김해"
+ VICTORY_POINTS_1054:0 "진주"
+ VICTORY_POINTS_13245:0 "전주"
+ VICTORY_POINTS_12085:0 "순천"
+ VICTORY_POINTS_13236:0 "남원"
+ VICTORY_POINTS_7175:0 "부여"
+ VICTORY_POINTS_7204:0 "천안"
+ VICTORY_POINTS_1100:0 "제천"
+ VICTORY_POINTS_9790:0 "평성"
+ VICTORY_POINTS_978:0 "덕천"
+ VICTORY_POINTS_11775:0 "희천"
+ VICTORY_POINTS_3803:0 "혜산"
+ VICTORY_POINTS_11878:0 "대홍단"
+ VICTORY_POINTS_6944:0 "라진"
+ VICTORY_POINTS_959:0 "김책"
+ #########
  VICTORY_POINTS_11960:0 "교토"
  VICTORY_POINTS_9998:0 "요코하마"
  VICTORY_POINTS_11925:0 "구마모토"
