니우스 맞춤법 수정

--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -218,7 +218,7 @@
  rok.19.d:0 ""
  rok.19.a:0 "침략자를 격퇴하자!"
  
- rok.24.t:0 "한국이 연합국가입을 요청하다"
+ rok.24.t:0 "한국이 연합국 가입을 요청하다"
  rok.24.d:0 "늘어나는 독일의 위협에 따라 미래에서 왔다고 자칭하는 대한민국에서 연합국 가입을 정식으로 요청해왔습니다."
  rok.24.a:0 "좋지."
  rok.24.b:0 "거부한다!"
@@ -350,31 +350,31 @@
  ############################뉴스
  
  kor_news.1.t:0 "대한민국에서의 군사반란"
- kor_news.1.d:0 "갑자기 한반도에 생겨난 대한민국이라는 국가에서 오늘, 전국적인 군사반란이 일어났습니다.\n\n반란군측은 한반도 남부를 장악한것으로 알려져있으며 현재 충청도지역에서 남하한 정부군부대와 대치중입니다. \n\n수도를 장악중인 정부군은 반란군을 한명도빠짐없이 모조리말살하겠다고했으며 비상계엄확대조치를 감행했습니다. "김대중"이 이끄는 남쪽의 반란군은 국민의 자유와 권리를 위협하는 독재정권은 반드시 무너질것이라 발표했습니다. \n\n한반도의 소요사태에 각국이 긴장하고있는가운데 일본이 한반도 재확보에 행동을개시할것이란 전문가의 분석도나왔습니다."
+ kor_news.1.d:0 "갑자기 한반도에 생겨난 대한민국이라는 국가에서 오늘, 전국적인 군사반란이 일어났습니다.\n\n반란군 측은 한반도 남부를 장악한 것으로 알려져있으며 현재 충청도 지역에서 남하한 정부군 부대와 대치중입니다. \n\n수도를 장악중인 정부군은 반란군을 한명도 빠짐없이 모조리 말살하겠다고 했으며 비상계엄 확대조치를 감행했습니다. "김대중"이 이끄는 남쪽의 반란군은 국민의 자유와 권리를 위협하는 독재정권은 반드시 무너질것이라 발표했습니다. \n\n한반도의 소요사태에 각국이 긴장하고 있는 가운데 일본이 한반도 재확보에 행동을 개시할것이란 전문가의 분석도나왔습니다."
  kor_news.1.a:0 "재미있군."
- kor_news.1.b:0 "반란군들은 하나도빠짐없이 섬멸될것이다."
- kor_news.1.c:0 "썩어빠진독재정을 끌어내릴때다!"
+ kor_news.1.b:0 "반란군들은 하나도 빠짐없이 섬멸될 것이다."
+ kor_news.1.c:0 "썩어빠진 독재정을 끌어내릴 때다!"
  
  
  kor_news.2.t:0 "서울 함락"
- kor_news.2.desc:0 "오늘아침, 한국군의 마지막 서울방어선이 붕괴되었고. 남하한 조선인민군병사들이 서울을 완전히 장악하였습니다. \n 대통령은 도시가 무너지기직전 탈출한것으로보이며 청와대에서 한국군병력과 조선인민군 특수작전조가 격렬한교전을 벌였습니다. \n\n 마지막으로 여의도에서 저항하던잔존세력을 섬멸하기위해 조선인민군이 무차별포격을 감행하였고. 고층빌딩에서 저항하는 세력을소탕하기위해 TNT로 건물자체를 붕괴시켜야했다고합니다. \n\n 현재 폐허로변한 도시곳곳에는 인공기가휘날리고 북한군병사들이 국회의사당앞에서 기념사진을찍으며 시가행진을하는중입니다. \n 세계는 두 신흥강대국의싸움을 숨죽여지켜보고있으며, 일각에서는 지금2국가가싸울때 공격해야한다고 주장중입니다."
+ kor_news.2.desc:0 "오늘 아침, 한국군의 마지막 서울 방어선이 붕괴되었고. 남하한 조선인민군 병사들이 서울을 완전히 장악하였습니다. \n 대통령은 도시가 무너지기 직전 탈출한 것으로 보이며 청와대에서 한국군 병력과 조선인민군 특수작전조가 격렬한 교전을 벌였습니다. \n\n 마지막으로 여의도에서 저항하던 잔존세력을 섬멸하기 위해 조선인민군이 무차별포격을 감행하였고. 고층빌딩에서 저항하는 세력을 소탕하기 위해 TNT로 건물자체를 붕괴시켜야 했다고 합니다. \n\n 현재 폐허로 변한 도시 곳곳에는 인공기가 휘날리고 북한군 병사들이 국회의사당 앞에서 기념사진을 찍으며 시가행진을 하는중입니다. \n 세계는 두 신흥 강대국의 싸움을 숨죽여 지켜보고 있으며, 일각에서는 지금 두 국가가 싸울때 공격해야 한다고 주장 중입니다."
  kor_news.2.a:0 "끔찍하군."
  kor_news.2.b:0 "우리는 전열을 가다듬을 필요가있다"
  kor_news.2.c:0 "수령동지를 위하여!"
  
  
  kor_news.3.t:0 "서울 해방"
- kor_news.3.desc:0 "서울에서 저항하던 마지막 조선인민군부대가 후퇴하고. 2번의공방전을 거친 서울에 한국군이 재입성하였습니다. \n 이전교전으로인해 도시는 완전히 파괴되었으며, 이를복구하는데는 오랜시간이 걸릴것으로보입니다. \n\n 국회의사당과 청와대에서 인공기가 내려가고 태극기가 계양되었으며 지하철에서 저항하는잔존세력을 섬멸하기위해 도시곳곳에는 아직 총성이 들리고있습니다. \n\n 서울의 해방으로인해 북한군은 남한에가진 이렇다할거점을 모두잃은채 퇴각중이며 곧 한국정부와 접촉할것으로보입니다."
+ kor_news.3.desc:0 "서울에서 저항하던 마지막 조선인민군부대가 후퇴하고. 2번의 공방전을 거친 서울에 한국군이 재입성하였습니다. \n 이전 교전으로인해 도시는 완전히 파괴되었으며, 이를 복구하는데는 오랜시간이 걸릴 것으로보입니다. \n\n 국회의사당과 청와대에서 인공기가 내려가고 태극기가 계양되었으며 지하철에서 저항하는 잔존세력을 섬멸하기 위해 도시곳곳에는 아직 총성이 들리고있습니다. \n\n 서울의 해방으로 인해 북한군은 남한에 가진 이렇다할 거점을 모두 잃은채 퇴각 중이며 곧 한국정부와 접촉할 것으로 보입니다."
  kor_news.3.a:0 "흥미롭군."
- kor_news.3.b:0 "남아있는 빨갱이들에게 자비란없다!"
- kor_news.3.c:0 "작전상 후퇴일뿐이다!"
+ kor_news.3.b:0 "남아있는 빨갱이들에게 자비란 없다!"
+ kor_news.3.c:0 "작전상 후퇴일 뿐이다!"
  
  
  kor_news.4.t:0 "조선인민군의 불법 남침!"
- kor_news.4.d:0 "한반도가 내전에빠진가운데. 이른새벽,휴전선전역에 조선인민군의 방사포와 포격소리가 뒤덮혔고 곧이어 북한군 전차부대들이 일제히 남하를 개시하였습니다. \n남한내 혼란상황을 이용한 불법남침으로 남한정부는 어떠한 선전포고도 받지 못했다고 주장중입니다. \n\n남쪽의 민주세력도 적지않아 당황한모양이며 북한군이 사태를 이렇게빨리 파악하고 일제히 남침을 개시할지 전혀몰랐던 모양입니다. \n북한군 주력부대는 이미 휴전선을향해 공격중이고 한반도는 더욱 혼란속으로 빠졌습니다."
+ kor_news.4.d:0 "한반도가 내전에 빠진가운데. 이른새벽, 휴전선 전역에 조선인민군의 방사포와 포격소리가 뒤덮혔고 곧이어 북한군 전차부대들이 일제히 남하를 개시하였습니다. \n남한내 혼란상황을 이용한 불법남침으로 남한정부는 어떠한 선전포고도 받지 못했다고 주장중입니다. \n\n남쪽의 민주세력도 적지않아 당황한 모양이며 북한군이 사태를 이렇게 빨리 파악하고 일제히 남침을 개시할지 전혀 몰랐던 모양입니다. \n북한군 주력부대는 이미 휴전선을 향해 공격 중이고 한반도는 더욱 혼란 속으로 빠졌습니다."
  kor_news.4.a:0 "한반도의 운명이 어떻게될까."
  kor_news.4.b:0 "빌어먹을 빨갱이들까지 난리로군!"
- kor_news.4.c:0 "우린 이걸원한게 아니였는데..최악이군." 
+ kor_news.4.c:0 "우린 이걸 원한게 아니였는데..최악이군." 
  kor_news.4.f:0 "동지여! 전진하자!"
 
  kor_news.5.t:0 "부산 함락"
@@ -399,7 +399,7 @@
  
  
  kor_news.8.t:0 "서해교전"
- kor_news.8.d:0 "오늘오전. 대한민국해군과 조선인민군해군과의 교전이일어났습니다. 조선인민군해군이 북방한계선을넘어왔고 대한민국해군이 충각전술로 밀어내기를시도하자 조선인민군해군에서 발포를시작했습니다. \n\n양측간 격렬한교전이 오갔고. 양측고속정이 심각한 피해를입었습니다, \n\n교전은 대한민국의 포항급 초계함이 도착하자마자 조선인민군소속 고속정이 먼저 도주하면서 종료되었고, \n 최근 대한민국이 발표한 외교정책에 반발한도발로 전문가들은 평가하고있습니다."
+ kor_news.8.d:0 "오늘오전. 대한민국 해군과 조선인민군 해군과의 교전이일어났습니다. 조선인민군 해군이 북방한계선을넘어왔고 대한민국 해군이 충각전술로 밀어내기를 시도하자 조선인민군 해군에서 발포를시작했습니다. \n\n양측간 격렬한 교전이 오갔고. 양측 고속정이 심각한 피해를 입었습니다, \n\n교전은 대한민국의 포항급 초계함이 도착하자마자 조선인민군 소속 고속정이 먼저 도주하면서 종료되었고, \n 최근 대한민국이 발표한 외교정책에 반발한 도발로 전문가들은 평가하고있습니다."
  kor_news.8.a:0 "흥미롭군."
  kor_news.8.b:0 "빨갱이새끼들!"
  kor_news.8.c:0 "작전상 후퇴일뿐이다!"
@@ -415,7 +415,7 @@
  
  
  kor_news.13.t:0 "동해 충돌"
- kor_news.13.desc:0 "동해상의 해역에서 일본제국 해군과 대한민국해군의 충돌이 일어났습니다.\n 들리는소식에의하면, 일본 함대의 피해는 걷잡기 힘든 상태인 것으로 보고됩니다. \n누가먼저 선제발포를 시작하였는지는 알수없으나,동해상에서 양국 해군의 교전이 시작되었습니다. \n결과는 처참했습니다. \n포항급 초계함에서 발사된 대함미사일이 일본제국 해군 항공모함을 꿰뚫었고, 이내 두 척의 항공모함은 바다 속으로 모습을 감추었습니다. \n주도권을 빼앗긴 일본제국 해군은 최대한 응전하고자 했지만 그들은 결국 상처만 남은 채로 귀항해야 했습니다."
+ kor_news.13.desc:0 "동해상의 해역에서 일본제국 해군과 대한민국 해군의 충돌이 일어났습니다.\n 들리는 소식에 의하면, 일본 함대의 피해는 걷잡기 힘든 상태인 것으로 보고됩니다. \n누가 먼저 선제발포를 시작하였는지는 알수없으나,동해상에서 양국 해군의 교전이 시작되었습니다. \n결과는 처참했습니다. \n포항급 초계함에서 발사된 대함미사일이 일본제국 해군 항공모함을 꿰뚫었고, 이내 두 척의 항공모함은 바다 속으로 모습을 감추었습니다. \n주도권을 빼앗긴 일본제국 해군은 최대한 응전하고자 했지만 그들은 결국 상처만 남은 채로 귀항해야 했습니다."
  kor_news.13.a:0 "대체 저들의 무기의 파괴력은 어느정도인거지..."
  kor_news.13.b:0 "멍청한 놈들!"
  kor_news.13.c:0 "일제 놈들의 야망은 분쇄되리라!" 
