--- a/localisation/replace/prk_focus_l_english.yml
+++ b/localisation/replace/prk_focus_l_english.yml
@@ -27,7 +27,7 @@
  prk_Marxism_Leninism:0 "마르크스-레닌주의"
  prk_Avoid_Kim_Jong_il:0 "김정일의 눈을 피하라"
  prk_Recruitment_of_Mechanized_Corps:0 "기계화군단 섭외"
- prk_Social_democracy:0 "사민주의"
+ prk_Social_democracy:0 "새로운 공화국"
  prk_left_right_joint_movement:0 "좌우합작운동"
  prk_Persuasion_of_the_High_Command_Officer:0 "군부내 고위지휘관 설득"
  prk_Purge_of_the_Soviet_Union_Overseas:0 "소련유학파출신 숙청"
