--- a/localisation/replace/kor_technology_sharing_l_english.yml
+++ b/localisation/replace/kor_technology_sharing_l_english.yml
@@ -4,3 +4,4 @@
  hydrogen_nukes:0 "수소폭탄"
  mtg_transport_2:0 "무역 수송선"
  convoy_2:0 "미래 수송선"
+ convoy_2_desc:0 "더욱 크고 많은 물자를 나를 수 있게된 현대식 수송선은 상품과 자원의 국제무역에서 주로 사용됩니다."
