--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -511,9 +511,22 @@
  kor_news.29.c:0 ""
  
  kor_news.28.t:0 "국제연합의 설립"
- kor_news.28.desc:0 "오늘. 부산,해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는이미 2번의 대전쟁을 거쳤으며, 과오가반복되지않도록 모든국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
+ kor_news.28.desc:0 "오늘. 부산, 해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년 당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는 이미 2번의 대전쟁을 거쳤으며, 과오가 반복되지 않도록 모든 국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
  kor_news.28.a:0 "더이상의 대전쟁은 안된다."
  kor_news.28.b:0 "국제연합이 세계평화를 지킬것이다."
+ 
+ kor_news.30.t: 0 "부산 함락"
+ kor_news.30.desc: 0 "오늘, 부산에서 저항하던 대한민국 반군들의 마지막 잔당과의 교전이 끝난 후, 정부군은 폐허가 된 부산 시청에 입성하였습니다. 시가지에서의 행진이 이루어졌으며 부산 시민들은 피로에 찌든 눈으로 그 행진을 바라보았습니다. 반군의 수장인 김대중과 김영삼은 현재 행방이 묘연한 상태이며 안기부에서는 곧 이 수괴들을 포박할 것이라고 천명하였습니다.\n한편 전두환 전 대통령은 이 승리에 대해서 "질서의 귀환이다"라고 짧은 소감을 내비쳤으며 노태우 대통령은 소식을 듣자 애매모호한 표정을 지었다고 합니다. \n현재 전문가들은 앞으로 한국에 권위주의적인 통치가 지속될 것이라고 지켜보고 있으며 많은 국제정치학자들이 통합된 미래국가가 어느정도의 힘을 낼 수 있을지 긴장을 놓지 않고 있습니다.\n\n내전은 끝났지만, 폐허가 된 한국 땅이 재건되려면 많은 시간이 필요할 것 같습니다."
+ kor_news.30.a: 0 "전란의 시작인가, 끝인가?"
+ kor_news.30.b: 0 "남조선이 통합되다니, 재앙이군."
+ kor_news.30.c: 0 "우리는 패배하였다."
+ kor_news.30.d: 0 "반역도들을 쓸어버려라!"
+ 
+ kor_news.31.t: 0 "부산 함락"
+ kor_news.31.desc: 0 "오늘, 부산에서 저항하던 마지막 조선인민군 잔당이 소탕된 후 정부군이 폐허가 된 시가지를 지나 시청에 태극기를 꽂았습니다. 시가지에서는 행진이 이루어졌으며 부산 시민들은 태극기를 든 체 환호를 하였습니다.\n\n북한의 최고지도자인 김일성은 이 사태에 분노하였으며 군부 책임자들을 처벌하였다고 발표하였습니다. 그러나 현재 북한은 공세종말점에 도달하였다고 판단되고 있으며 곧 양측 정부는 평화협정을 맺을 것이라고 보고 있습니다.\n\n전란이 수습되었지만, 폐허가 된 한반도가 재건되려면 많은 시간이 걸릴 것입니다."
+ kor_news.31.a: 0 "전란의 시작인가, 끝인가?"
+ kor_news.31.b: 0 "우리는 패배하였다."
+ kor_news.31.c: 0 "승리다!"
  
 ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
