--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -356,6 +356,36 @@
  rok.57.d:0 ""
  rok.57.a:0 "제길."
  
+ rok.58.t:0 "불곰사업"
+ rok.58.d:0 ""
+ rok.58.a:0 "사업을 제안한다"
+ rok.58.b:0 "다시한번 생각해보자"
+ 
+ rok.59.t:0 "한국이 사업을 제안하다"
+ rok.59.d:0 ""
+ rok.59.a:0 "마음에 드는 제안이군,"
+ rok.59.b:0 "우리는 현금으로 받을것이다!"
+ 
+ rok.60.t:0 "사업제안을 수락한 소비에트연방"
+ rok.60.d:0 ""
+ rok.60.a:0 "훌륭하군"
+ 
+ rok.61.t:0 "사업제안을 거부한 소비에트연방"
+ rok.61.d:0 ""
+ rok.61.a:0 "이런..."
+
+ rok.62.t:0 "경제개방 활성화"
+ rok.62.d:0 ""
+ rok.62.a:0 "실행하라"
+
+ rok.63.t:0 "한국의 경제개방"
+ rok.63.d:0 ""
+ rok.63.a:0 "좋군"
+
+ rok.64.t:0 "한국의 경제개방"
+ rok.64.d:0 ""
+ rok.64.a:0 "좋군"
+ 
  mkorea.51.t:0 "동해교전"
  mkorea.51.d:0 "."
  mkorea.51.a:0 ""
