--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -341,12 +341,25 @@
  
  #ROK 
  
- KOR_imf_level_up_tt:0 "차관대여의 보너스를 얻습니다. §G많은국가들이 차관을 빌려줄수록 보너스는 더욱 커질것입니다§!"
+ KOR_imf_level_up_tt:0 "차관대여의 보너스를 얻습니다. §G더 많은국가들이 차관을 빌려줄수록 보너스는 더욱 커질것입니다§!"
+ KOR_economic_collapse_down:0 "§G경제붕괴의 피해를 수습합니다§!"
+ bear_business_1:0 "차관을 제공함"
+ economic_collapse_end:0 "경제가 완전히 안정화됨"
+ remove_mkr:0 "§G군사정부의 잔재들이 제거될것입니다§!"
+ 
+ economy_open_bonus_minor:0 "미래의 제품들"
+ economy_open_bonus:0 "미래의 제품들"
+ economy_open:0 "경제개방 활성화"
+ economy_close:0 "수,출입 폐쇄"
+ economy_close_1:0 "경제 폐쇄 강화"
+ chaebol:0 "재벌"
+ chaebol_1:0 "힘을 얻는 재벌"
+ chaebol_2:0 "규제받는 재벌"
  rok_loan_1:0 "대여한 차관"
  loan_1:0 "차관레벨 1"
- loan_2:0 "차관레벨 1"
- loan_3:0 "차관레벨 1"
- loan_4:0 "차관레벨 1"
+ loan_2:0 "차관레벨 2"
+ loan_3:0 "차관레벨 3"
+ loan_4:0 "차관레벨 4"
  rok_Invest_in_Education:0 "교육에 투자"
  rok_Divided_politics:0 "분열된 정계"
  rok_Political_Integration:0 "정계통합"
