--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -44,9 +44,9 @@
  fair_competition:0 "공정한 경쟁"
  KAIST:0 "KAIST"
  defence_industry:0 "방위사업"
- check_of_large_enterprises:0 "파괴된인프라 복구"
+ check_of_large_enterprises:0 "재벌 강화"
  liquidation_of_insolvent_enterprises:0 "부실기업 정리"
- small_business_policy:0 "중소기업 정책"
+ small_business_policy:0 "재벌에 도전"
  economic_opening:0 "경제개방 활성화"
  No_export_allowed:0 "수출 불허"
  meet_chang:0 "장제스를 만나다"
@@ -114,6 +114,7 @@
  ROK_f15_pilot:0 "현대식 파일럿"
  ROK_koreas_new_eqp:0 "한국식 미래 기술"
  ROK_the_miracle_of_han_river:0 "한강의 기적"
+ bear_business:0 "불곰사업"
 
  ROK_security_law:0 "긴급 보안법"
  ROK_national_support:0 "국민지지확보"
