트레잇, 이벤트, 북괴, 성공적.

--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -556,7 +556,7 @@
  kor_news.28.t:0 "국제연합의 설립"
  kor_news.28.desc:0 "오늘. 부산, 해운대에서 국제연합본부의 완공기념식이 개최되었습니다. 이건물은 1952년 당시 뉴욕에 건축되었었던 국제연합본부를 본따 설계되었으며, 기념식에는 각국인사들이 참여하였습니다.\n\n대한민국 대통령 [ROK.GetLeader]는 연설에서 '세계는 이미 2번의 대전쟁을 거쳤으며, 과오가 반복되지 않도록 모든 국가의 참여가 중요하다'라는 말을 남겼습으며, 지구의 모든국가가 참여하는게 중요하다고 강조했습니다.\n\n한편, 국제연합의 상임이사국으로 [ROK.GetName]과 [ENG.GetName],[FRA.GetName],[SOV.GetName],[USA.GetName],[JAP.GetName],[CHI.GetName]들이있습니다."
  kor_news.28.a:0 "더이상의 대전쟁은 안된다."
- kor_news.28.b:0 "국제연합이 세계평화를 지킬것이다."
+ kor_news.28.b:0 "국제연합이 세계평화를 지킬 것이다."
  
  kor_news.30.t: 0 "부산 함락"
  kor_news.30.desc: 0 "오늘, 부산에서 저항하던 대한민국 반군들의 마지막 잔당과의 교전이 끝난 후, 정부군은 폐허가 된 부산 시청에 입성하였습니다. 시가지에서의 행진이 이루어졌으며 부산 시민들은 피로에 찌든 눈으로 그 행진을 바라보았습니다. 반군의 수장인 김대중과 김영삼은 현재 행방이 묘연한 상태이며 안기부에서는 곧 이 수괴들을 포박할 것이라고 천명하였습니다.\n한편 전두환 전 대통령은 이 승리에 대해서 "질서의 귀환이다"라고 짧은 소감을 내비쳤으며 노태우 대통령은 소식을 듣자 애매모호한 표정을 지었다고 합니다. \n현재 전문가들은 앞으로 한국에 권위주의적인 통치가 지속될 것이라고 지켜보고 있으며 많은 국제정치학자들이 통합된 미래국가가 어느정도의 힘을 낼 수 있을지 긴장을 놓지 않고 있습니다.\n\n내전은 끝났지만, 폐허가 된 한국 땅이 재건되려면 많은 시간이 필요할 것 같습니다."
@@ -571,7 +571,7 @@
  kor_news.31.b: 0 "우리는 패배하였다."
  kor_news.31.c: 0 "승리다!"
  
-################################## 북한 ##############################################
+ ################################## 북한 ##############################################
  PRK.13.t:0 "국방위원장의 암살!"
  PRK.13.d:0 "김일성 광장에서 열병식이 한창 진행 중이던 시각, 계획대로 행렬 속에서 주행 중이던 전차 한 량이 국방위원장 일동을 향해 발포했습니다. 단 한 발의 포성으로 광장은 순식간에 아수라장이 됐지만 얼마 지나지 않아 우리 소속의 장교들에 의해 상황은 통제 하에 들어갔습니다. 그러나 현재 김정일 국방위원장의 상태는 묘연합니다. 유일하게 우리가 확신할 수 있는 것은 그가 성한 몸으로 살아남았더라도 우리의 거사를 막을 방도가 없을 것이라는 점입니다.."
  PRK.13.a:0 "잘 자시오, 동지."
@@ -589,12 +589,12 @@
  PRK.24.a:0 "좋아. 평화에 서명한다"
  PRK.24.b:0 "어림없는소리!"
  
- PRK.25.t:0 "북한이 우리의 제의를 수락하다"
- PRK.25.desc:0 "북한은 우리의 평화 제의를 수락했고, 우리영토를 할양하는 대가로 적대 행위를 중지했습니다."
+ PRK.25.t:0 "[PRK.GetName]이 우리의 제의를 수락하다"
+ PRK.25.desc:0 "[PRK.GetLeader]은 우리의 평화 제의를 수락했고, 우리영토를 할양하는 대가로 적대 행위를 중지했습니다."
  PRK.25.a:0 "치욕이군..."
  
- PRK.26.t:0 "북한의 평화 거절"
- PRK.26.desc:0 "북한(은)는 우리의 평화 제의를 거부했고, 무조건 항복을 받아내기 전까지 전쟁을 계속할 것입니다."
+ PRK.26.t:0 "[PRK.GetName]의 평화 거절"
+ PRK.26.desc:0 "[PRK.GetLeader](은)는 우리의 평화 제의를 거부했고, 무조건 항복을 받아내기 전까지 전쟁을 계속할 것입니다."
  PRK.26.a:0 "그럼 우리도 최후까지 싸울 것이다!"
  
  
@@ -604,12 +604,17 @@
  
  
  PRK.32.t:0 "수도 이전"
- PRK.32.desc:0 "."
+ PRK.32.desc:0 "다시 통일된 조국을 만들었으니 우리는 현재, 북쪽으로 치우쳐진 평양을 대신하여 수도를 지정해야 합니다. \n후보지는 총 3곳\n\n서울\n개성\n평양\n\n입니다."
  PRK.32.a:0 "'서울'으로 변경"
  PRK.32.b:0 "'개성'으로 변경"
  PRK.32.c:0 "'평양'으로 유지"
  
  
+ PRK.43.t:0 "김일성 사망"
+ PRK.43.desc:0 ""지난 1994년(1939년) 7월 8일, 조선민주주의인민공화국의 최고 지도자이시자 최고지도자이신 김일성 동지께서 서거하셨습니다. 비통한 마음으로 이 소식을 전하며, 목놓아 곡을 올립니다."\n\n김일성이 사망하였습니다. 후계는 김정일이 잇습니다."
+ PRK.43.a:0 "안녕히가세요, 수령동지."
+ 
+ ##########################
  rok_civ.1.t:0 "긴급 보안법"
  rok_civ.1.d:0 "하나회를 비롯한 반군과의 내전이 시작되었습니다. 거리는 파괴되고 있으며 국가는 비상사태에 들어갔습니다.\n\n국민의 권한을 일시적으로 제한합니다."
  rok_civ.1.a:0 "자유를 위한 탄압인가?"
