--- a/localisation/replace/kor_ideas_l_english.yml
+++ b/localisation/replace/kor_ideas_l_english.yml
@@ -373,3 +373,14 @@
  rok_volunteer:0 "의용병 파견"
  prk_volunteer:0 "의용병 파견"
  rok_national_attack:0 "전체주의 분쇄"
+ 
+ trait_PRK_kim_ilsung:0 "수령"
+ trait_PRK_kim_jungil:0 "장군"
+ trait_PRK_kim_jungun:0 "최고지도자"
+ 
+ trait_MKR_roh_tae_woo:0 "물에 물탄 듯"
+ trait_MKR_chun_doo_hwan:0 "무자비한 독재자"
+ 
+ trait_ROK_kim_dae_jung:0 "마지막 불꽃"
+ trait_ROK_kim_yong_sam:0 "민주 투사"
+ trait_ROK_kim_koo:0 "임시정부 주석"
