--- a/localisation/replace/09_kor_ideas_l_english.yml
+++ b/localisation/replace/09_kor_ideas_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ KOR_the_cheat:0 "더미데이터 - 치트"
  ### KOR - idea
  KOR_north_south_problem:0 "남북갈등"
  KOR_imf_economic_crisis:0 "한국 금융위기"
