--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -63,15 +63,15 @@
  Invitation_to_India:0 "인도 초대"
  Invitation_to_New_Zealand:0 "뉴질랜드 초대"
  the_fall_of_imperialism:0 "제국주의의 몰락"
- ROK_defence_export:0 "보호무역"
+ ROK_defence_export:0 "국내산업 지원"
  ROK_forigin_inpra:0 "외국 기업 인수합병"
- ROK_panho:0 "판호법 도입"
+ ROK_panho:0 "내수시장 장려"
  ROK_germans_attack:0 "독일의 위협 홍보"
  ROK_auschibitz:0 "절멸계획 알리기"
  ROK_national_attack:0 "전체주의 분쇄작전"
  ROK_military_reform:0 "하나회 잔당 소거"
  ROK_korean_tech_none-law:0 "미래기술보호법"
- ROK_build_the_wall:0 "한국의 장벽 건설"
+ ROK_build_the_wall:0 "제한적 수입 허용"
  ROK_make_korea_great_again:0 "한국을 다시 위대하게!"
  ROK_tex_boom:0 "관세 폭탄"
  ROK_good_japan_is_dead_japan:0 "일본의 만행 알리기"
@@ -85,7 +85,7 @@
  ROK_hawwai_defence:0 "주한미군 문제"
  ROK_plan_green:0 "작전명 초록"
  ROK_plan_black:0 "작전명 검정"
- ROK_new_general:0 "새로운 장교들"
+ ROK_new_general:0 "국방개혁"
  ROK_independence_army:0 "독립군 장성 고용"
  ROK_co-aisan_allied:0 "아시아 연방 구축"
  ROK_eastern_nope:0 "차별 금지법 제정"
