--- a/localisation/replace/kor_events_l_english.yml
+++ b/localisation/replace/kor_events_l_english.yml
@@ -64,8 +64,8 @@
  korea.11.d:0 "서울의 군사정부가 붕괴된 후, 군사정부 통제 하에 있던 사단들은 무작정 남쪽으로 후퇴해 우리에게 투항하였습니다. 비록 한때의 적이었지만 일단 눈앞의 북한군을 막기 위해 사령부는 이들을 전투에 투입하는 것을 허용하였습니다. 대부분의 사단들이 심각한 피해를 입은 상태였지만 후방인 부산에서 재편성된 사단들은 병사 한 명이 절박한 우리에게 큰 도움이 될 것입니다."
  korea.11.a:0 "아주 좋군."
  
- korea.21.t:0 "잔존 하나회세력의 반란!!"
- korea.21.d:0 "우리가 하나회 숙청에 밍기적대는동안,하나회에서 먼저 선수를쳤습니다!! 보안사령관'서완수'중장과 육군참모총장'김진영'을 필두로한 반란군세력들이 또다시 무기를 들었습니다. 내전의 상처를 미처 치유하지도 못한채,우리는 또다시 반란군세력을 상대하여야 합니다....."
+ korea.21.t:0 "잔존 하나회 세력의 반란!!"
+ korea.21.d:0 "우리가 하나회 숙청에 밍기적대는 동안, 하나회에서 먼저 선수를쳤습니다!! 보안사령관 '서완수' 중장과 육군참모총장 '김진영'을 필두로한 반란군세력들이 또다시 무기를 들었습니다. 내전의 상처를 미처 치유하지도 못한채,우리는 또 다시 반란군 세력을 상대하여야 합니다....."
  korea.21.a:0 "이나라가 어떻게 되려나."
  
  korea.100.t:0 "내전에 돌입"
@@ -77,12 +77,12 @@
  korea.300.a:0 "이런 제기랄."
  
  korea.12.t:0 "항공자위대와 접촉하다."
- korea.12.d:0 "오늘아침 남해를 비행중이던 항공자위대 항공기가. 대구공항에 착륙허가를 요청하였습니다, 예정에없던일이라 당황하였지만 이들은 이상한이야기를 하고있었습니다. 자위대 비행장 관제탑과 연락은물론,방위성,항공자위대 사령부,그어떠한 곳과도 연락이되지않아 우리에게로 왔다고합니다. 우리는영문도모른채 일단 이들의 착륙을 허가하였습니다."
- korea.12.a:0 "이게대체 무슨일인지."
+ korea.12.d:0 "오늘 아침 남해를 비행 중이던 항공자위대 항공기가. 대구 공항에 착륙허가를 요청하였습니다, 예정에 없던 일이라 당황하였지만 이들은 이상한 이야기를 하고있었습니다. 자위대 비행장 관제탑과 연락은물론, 방위성, 항공자위대 사령부, 그 어떠한 곳과도 연락이 되지않아 우리에게로 왔다고합니다. 우리는 영문도 모른채 일단 이들의 착륙을 허가하였습니다."
+ korea.12.a:0 "이게 대체 무슨일인지."
  
  korea.15.t:0 "항공자위대 항공기 합병?"
- korea.15.d:0 "전황이 점점 심각해짐에 따라, 대구공항에 일시 착륙했던 항공자위대의 항공기에대한 처분이 물위로 떠올랐습니다.주한 일본대사와 쓰시마의 해상자위대는 조종사와 장비의 반환을 강력 요구하고있지만. 정식 일본정부도없는 그들의 요구따위야 무시하면 그만일것입니다,하지만 현재 타임슬립한 해상자위대 호위대군이 무슨행동을취할지 전혀 알수없고,만약 이들이 적으로 돌아선다면 우리해군의 전멸을 각오해야할것입니다. 이 장비들을 어떻게 해야할까요?"
- korea.15.a:0 "일단 우리의 일이급하다! 조종사만 반환한다!"
+ korea.15.d:0 "전황이 점점 심각해짐에 따라, 대구공항에 일시 착륙했던 항공자위대의 항공기에 대한 처분이 물위로 떠올랐습니다. 주한 일본대사와 쓰시마의 해상자위대는 조종사와 장비의 반환을 강력 요구하고있지만. 정식 일본정부도 없는 그들의 요구 따위야 무시하면 그만일 것입니다,하지만 현재 타임슬립한 해상자위대 호위대군이 무슨행동을 취할지 전혀 알 수없고,만약 이들이 적으로 돌아선다면 우리 해군의 전멸을 각오해야 할 것입니다. 이 장비들을 어떻게 해야할까요?"
+ korea.15.a:0 "일단 우리의 일이 급하다! 조종사만 반환한다!"
  korea.15.b:0 "일단 자위대의 요구를 승낙한다."
  
 ##############################군사정부
@@ -101,7 +101,7 @@
  mkorea.3.a:0 "잘됐군."
  
  mkorea.4.t:0 "무차별폭격 승인?"
- mkorea.4.d:0 "전황이 나아질기미가 보이질않자. 공군참모총장이 무차별폭격승인을 요청하는 전문을 보내왔습니다. 반란군이 보이는지역마다 민간인피해계산할것없이 무차별적으로 폭격한다는 사안이였습니다. 아군 공격기와 공격헬기의 작전이 더욱수월해지겠지만 국민들의 반발과 무고한민간인피해가 예상됩니다..."
+ mkorea.4.d:0 "전황이 나아질 기미가 보이질않자. 공군참모총장이 무차별폭격 승인을 요청하는 전문을 보내왔습니다. 반란군이 보이는 지역마다 민간인피해 계산할 것 없이 무차별적으로 폭격한다는 사안이였습니다. 아군 공격기와 공격헬기의 작전이 더욱수월해지겠지만 국민들의 반발과 무고한민간인피해가 예상됩니다..."
  mkorea.4.a:0 "승인한다."
  mkorea.4.b:0 "그들도 국민이다!! 헛소리는 집어치워라."
  
@@ -620,15 +620,15 @@
  rok_civ.1.a:0 "자유를 위한 탄압인가?"
  
  rok_civ.2.t:0 "연설 - 김대중"
- rok_civ.2.d:0 "비가 추적추적 내리는 어느 날. 자유를 위해 수십년간 독재와 맞서 싸운 한 남자가 부산 광장에 섰다.\n\n김대중.\n\n"국민여러분, 나 김대중입니다.(작성중)""
+ rok_civ.2.d:0 "비가 추적추적 내리는 어느 날. 자유를 위해 수십년간 독재와 맞서 싸운 한 남자가 부산 광장에 섰다.\n\n김대중.\n\n"민중의 한은 원한이 아닙니다. 그렇기 때문에 복수로써 풀리지 않습니다. 그 소망의 성취로써만 풀립니다."\n\n그는 뜬구름 같은 말로 입을 띄었다.\n\n"이 판소리는 가장 우리 민중의 한을 잘 대변하고 있습니다. 우리가 춘향전을 보면 춘향이의 한은 결코 자기를 그렇게 괴롭히고 감옥에 들어가서 곤장을 때리고 수청 안 든다고 해서 박해한 신관사또 변 사또에게 보복하는 데 있지 않습니다.\n암행어사 출두해서 이몽룡이가 춘향을 석방시킨 후에도 변 사또에 대해서 춘향이로 인해서 보복하지 않습니다. 다른 탐관오리로서의 조건 때문에 봉고파직 하는 것입니다. 춘향이의 한은 자기를 사랑하는 이 도령과 맺어짐으로써 풀립니다. "\n\n잠시 비가 내리는 광장을 들여다본 그는 기침을 하더니 다시 말을 이어나가기 시작했다.\n\n"...이와 같이 우리 국민의 한은 좌절된 소망을 기다리고 기다리면서 성취하도록 노력해서 그 성취를 통해 풀리는 것이지, 결코 보복과 원한, 그리고 사적인 이득으로 풀리는 것이 아닙니다. 항상 굳센 마음으로 기다리며 노력한 끝에 이뤄진 것입니다.\n우리는 4.19를 기억해야 합니다. 12년 독재를 무너뜨린 그 학생들의 혼을 기억해야 합니다. 우리는 부마 항쟁을 기억해야 합니다. 18년 독재를 무너뜨린 민중들의 혼을 기억해야 합니다. 우리는 광주의 민중들이 가슴에 품고 죽었던 그 한, 자유롭고 정의로운 나라에 살고 싶다, 인간이 인간 대우를 받는 나라에 살고 싶다, 내 자식들을 위해서 이런 죄악된 나라를 후손에게 남겨주고 싶지 않다. 그러면서 죽어간 그 모든 민중들의 한을 이 땅의 독재 척결과 민주 주권 회복을 통해서 풀어주는 것만이 오늘날 우리 국민 뿐만 아니라 자식에게, 우리 자손만대에게 자유롭고 정의로운 대한을 물려주기 위해 반드시 필요하며 정부와 국민 모두가 다같이 어려운 시기에 다같이 구원받고 서로 화목하고 서로 단결하고 서로 평화롭게 살 수 있는 유일한 길이라는 것을 나는 믿어 의심치 않고, 유일한 길이라는 것을 여러분들에게 분명히 말씀드리고 싶습니다."\n\n대중들은 잠시동안 멍하게 있다가, 한사람이 박수를 치기 시작하더니 연달아 우레같은 박수와 함성이 광장을 뒤덮기 시작하였다.\n비 내리던 하늘에는 어느새 구름 위 무지개가 떠있었다."
  rok_civ.2.a:0 "자유대한 만세!"
  
  rok_civ.3.t:0 "독립 운동가들의 귀국"
- rok_civ.3.d:0 ""
+ rok_civ.3.d:0 "과거로 돌아온 지금, 한민족의 나라가 다시 세워졌으니 당연히 독립운동가들 또한 소식을 접하였다.\n\n항저우 임시정부에서는 고국으로 귀환하기 위한 움직임이 바쁘게 이루어지고 있었다. 조국 독립을 위한 모든 노력이 배신당하지는 않았는지, 하느님이 그들의 소원을 들어주었는지는 모르겠지만 신대한이 다시 한반도에 다시 설립되었다는 소식에 발빠르게 떠날 채비를 하고 있었다.\n\n"이제 얼추 다 마친 것같네."\n"알겠습니다. 선생님들을 편히, 고국으로 모시겠습니다."\n정부에서 나온 요원이 그들의 말에 대답을 하였다. \n\n공항에 들어선, 기골이 장대한 한 남자는 들뜬 마음을 감추지 못하고 마중을 나온 한 남자에게 말을 걸었다.\n\n"..이곳이 이조 한양이오?"\n"아닙니다."\n"..일제 케이조이오?"\n"역시 아닙니다."\n\n남자, 김구는 떨리는 목소리로 다시 한번 물었다.\n\n"그러면 이곳이 자유대한의 수도, 서울이오?"\n그제서야 남자는 바로 답했으니.\n\n"맞습니다. 고국에 돌아오신 것을 환영합니다.""
  rok_civ.3.a:0 "환영합니다, 영웅들이여!"
  
  rok_civ.4.t:0 "독립군 장교단의 귀국"
- rok_civ.4.d:0 ""
+ rok_civ.4.d:0 "독립운동가들이 귀국함에 따라 군"
  rok_civ.4.a:0 "그들은 도움이 될 것이다."
  
  rok_civ.6.t:0 "동원령"
