--- a/localisation/replace/korea_mod_traits_l_english.yml
+++ b/localisation/replace/korea_mod_traits_l_english.yml
@@ -58,3 +58,11 @@
  KOR_army_3:0 "광복군 부사령관"
  
  KOR_war_god:0 "전쟁의 신"
+
+ 
+ 
+ korea_cheat.1.t:0 "타임슬립 코리아 2009년 - 생산 버프"
+ korea_cheat.1.d:0 "생산버프를 받으시겠습니까?"
+ korea_cheat.1.a:0 "예"
+ korea_cheat.1.b:0 "아니오"
+ check_will_be_cheated:0 "§R생산버프가 적용될 것입니다. 게임이 재미없어질 수 있으니 신중하게 선택해주세요.§!"
