--- a/localisation/replace/kor_bookmarks_l_english.yml
+++ b/localisation/replace/kor_bookmarks_l_english.yml
@@ -3,6 +3,8 @@
  FKR_GATHERING_STORM_1991_DESC:0 "1945년 독립을 한 신생국가 대한민국은 6,70년대 개발독재 시대를 거쳐서 80년대의 민주화 운동을 지나 88년 올림픽을 개최하였을 정도로 발전하였습니다.88년의 올림픽을 주최한 노태우 대통령은 1991년 임기가 말엽이 되가던 도중 확인불명의 현상을 파악하였습니다.\n이 현상은 한반도 전역을 덮었으며 곧 이어서 눈앞이 환해지더니만 다시 원래대로 돌아왔습니다.그러나 정부가 상황을 파악했을 땐 원래 알던 세계가 아니라 1936년이라는 것을 파악하였습니다.\n\n1936년으로 돌아간 한국은 이 세계에서 어떤 영향을 미치게 될까요?\n- 제작자 UKKRHEE"
  KPA_GATHERING_STORM_DESC:0 "북한이라고 불리우는 이 국가는 자신의 원수들과 큰 격차가 벌어졌습니다. 1990년 말기 고난의 행군을 겪은 후 국가는 붕괴 직전이었습니다. \n2009년 한반도를 뒤엎은 초현상으로 국가 자체가 전이된 상황에서 북한은 다시 한번 위기를 맞이하였습니다. 이제는 말 그대로 생존을 위한 싸움이 시작될 것입니다."
  GATHERING_STORM_NAME_1991:0 "폭풍전야(1991)"
+ GATHERING_STORM_NAME_1991_desc:0 "6.25 전쟁 이후 동아시아의 화약고는 점점 사그라들고 있는 듯 합니다. 1988년 올림픽을 끝으로 자유민주주의 체제의 우월성을 증명한 대한민국은 민주주의의 가치를 서서히 이뤄나가고 있으며 경제 또한 단군 이래 최대 호황을 유지하고 있습니다. 반면, 북한은 70년대 실패한 정책들의 결과로 서서히 죽어가고 있습니다. 잠든 화약고는 언제 터질지 모릅니다."
  GATHERING_STORM_NAME_2009:0 "폭풍전야(2009)"
+ GATHERING_STORM_NAME_2009_desc:0 "수 많은 시간이 흘렀습니다. 서브프라임 모기지 사태는 전 세계적인 불황을 불러일으켰으며 많은 실업자, 혼란한 사회를 만들었습니다. 이 가운데, 한반도에서는 대한민국이 서브프라임 사태를 슬기롭게 해결해 나가고 있으며 체제경쟁에서 완전히 쓸려나간 북한은 암흑의 구렁텅이로 빠져가고 있습니다.\n어떠한 초 자연적인 현상이 있지 않는 한, 세계는 늘 그렇듯 혼란스럽지만 꾸준히 앞으로 나아갈 것입니다."
  KR1_GATHERING_STORM_DESC:0 "수많은 혁명끝에 대한민국에는 민주주의가 정착하였습니다. \n또한 1988년에 서울올림픽을 성공적으로 개최하며 선진국으로 도약하는가운데 1991년말, 노태우정권말기에 우리는 큰위기를 맞았습니다. \n\n한반도가 알수없는기현상에 휩쓸렸고 눈을떠봤을때는 알수없는세계로 도착한뒤였습니다. \n구일본제국 함선이 동해를 초계하고 라디오에선 대본영발표가 흘러나오고있습니다. \n\n국민들은 혼란스러워하고 각국과 연락이끊긴가운데 우리는 이사태를 어떻게든 해결해야합니다 \n- 기획,제작 kkshunp"
  PRK_GATHERING_STORM_DESC:0 "1991년은 재앙과도같은 년도였습니다. 동유럽은 몰락했고,소비에트연방은 쇠약해져 해체의 길을 걷고있었습니다. \n\n하지만 기현상이 조선반도전역을 휩쓸었고 눈을떠본뒤에는 이상한세계로 이동한후였습니다. \n다행이도 우리군대의 대부분은 건재하며 우리가갖추고있던 인프라도 모두 정상입니다. \n\n하지만 남한내 주한미군과 한국군은 혼란스러워하며 마비되었고 눈엣가시였던미합중국은 현재 구식함선과 볼트액션소총따위로 무장한상태입니다. \n- 기획,제작 kkshunp"
