--- a/localisation/replace/rok_focus_l_english.yml
+++ b/localisation/replace/rok_focus_l_english.yml
@@ -138,7 +138,7 @@
  ROK_plan_black:0 "작전명 검정"
  ROK_new_general:0 "국방개혁"
  ROK_independence_army:0 "새로운 장교들"
- ROK_co-aisan_allied:0 "아시아 연방 구축"
+ ROK_co-aisan_allied:0 "동아시아 경제 파트너쉽"
  ROK_eastern_nope:0 "차별 금지법 제정"
  ROK_the_union_of_pan-asia:0 "대 아시아 연방"
  ROK_democracy_is_best:0 "자유와 민주주의 알리기"
