--- a/localisation/kor_events_l_english.yml
+++ b/localisation/kor_events_l_english.yml
@@ -93,15 +93,15 @@
  mkorea.1.a:0 "알겠네."
  
  mkorea.2.t:0 "추가 예비군동원"
- mkorea.2.d:0 "동원령이 발령되었고. 추가적인 예비군이 동원되었습니다, 구식무기로 무장중이지만 싸울준비를 마쳤습니다."
+ mkorea.2.desc:0 "동원령이 발령되었고. 추가적인 예비군이 동원되었습니다, 구식무기로 무장중이지만 싸울준비를 마쳤습니다."
  mkorea.2.a:0 "알겠네."
  
- mkorea.3.t:0 "독립군장교단의 귀국!"
- mkorea.3.d:0 "임시정부 광복군 참모장을 지내던 이범석 장군과 총사령관 지청천 장군이 오늘막 인천 국제공항에 도착하였습니다. 달라진 대한민국의 모습에 놀라는것도 잠시, 이들은 반란군이 봉기했다는 소식을듣고 남쪽의 반란군에 맞서 대항하길 원한다며 한국군에 복무를 요청하였습니다."
+ mkorea.3.title:0 "독립군장교단의 귀국!"
+ mkorea.3.desc:0 "임시정부 광복군 참모장을 지내던 이범석 장군과 총사령관 지청천 장군이 오늘막 인천 국제공항에 도착하였습니다. 달라진 대한민국의 모습에 놀라는것도 잠시, 이들은 반란군이 봉기했다는 소식을듣고 남쪽의 반란군에 맞서 대항하길 원한다며 한국군에 복무를 요청하였습니다."
  mkorea.3.a:0 "잘됐군."
  
  mkorea.4.t:0 "무차별폭격 승인?"
- mkorea.4.d:0 "전황이 나아질기미가 보이질않자. 공군참모총장이 무차별폭격승인을 요청하는 전문을 보내왔습니다. 반란군이 보이는지역마다 민간인피해계산할것없이 무차별적으로 폭격한다는 사안이였습니다. 아군 공격기와 공격헬기의 작전이 더욱수월해지겠지만 국민들의 반발과 무고한민간인피해가 예상됩니다..."
+ mkorea.4.d:0 "전황이 나아질 기미가 보이질않자. 공군참모총장이 무차별폭격승인을 요청하는 전문을 보내왔습니다. 반란군이 보이는지역마다 민간인피해계산할것없이 무차별적으로 폭격한다는 사안이였습니다. 아군 공격기와 공격헬기의 작전이 더욱수월해지겠지만 국민들의 반발과 무고한민간인피해가 예상됩니다..."
  mkorea.4.a:0 "승인한다."
  mkorea.4.b:0 "그들도 국민이다!! 헛소리는 집어치워라."
  
@@ -637,6 +637,11 @@
  rok_civ.6.t:0 "동원령"
  rok_civ.6.d:0 ""
  rok_civ.6.a:0 "우리 찬란한 조국을 위해!"
+ 
+ korea_war.16.t:0 "평화협상"
+ korea_war.16.d:0 "북한군이 서울 점령에 실패하고 전쟁이 참호전으로 번지자, 저들의 수뇌부들은 전쟁 이전으로의 복귀를 주장하였습니다."
+ korea_war.16.a:0 "받아들이자."
+ korea_war.16.b:0 "끝까지 갈 것이다!"
  
  remove_mkr:0 "§G군사정부의 잔재들이 제거될 것입니다§!"
  fall_of_busan_MKR_1:0 "§Y내전이 끝났다§!" 
